--- a/popup.css
+++ b/popup.css
@@ -1,14 +1,21 @@
 #list {
     display: flex;
+    width: 128px;
+    height: 64px;
 }
 
 #list img {
-    margin: 3px;
+    margin: 12px;
+    width: 40px;
+    height: 40px;
+    border-radius: 10%;
     transition: 0.2s;
+    backface-visibility: hidden;
 }
 
 #list img:hover {
-    transform: scale(1.2);
+    transform: scale(1.6);
+    backface-visibility: hidden;
 
 }
 
